[gd_scene load_steps=10 format=3 uid="uid://xyb6o5gqthi2"]

[ext_resource type="Script" uid="uid://brrk43wy7e488" path="res://src/new_player/player_ship.gd" id="1_vat7b"]
[ext_resource type="SpriteFrames" uid="uid://ch4im1rilc4hk" path="res://assets/Ships/ship_frames.tres" id="2_lxoi7"]
[ext_resource type="Script" uid="uid://38377jab0uwa" path="res://src/new_player/ram_area.gd" id="3_lxoi7"]
[ext_resource type="Script" uid="uid://dsmk2mjcttyx8" path="res://src/new_player/health_component.gd" id="4_bjshi"]
[ext_resource type="Script" uid="uid://dicrof58losyh" path="res://src/new_player/health_based_sprite_component.gd" id="4_lv0p8"]
[ext_resource type="Script" uid="uid://dgkclkobpug1q" path="res://src/new_player/ship_behaviour_component.gd" id="6_vc7ef"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vat7b"]
radius = 16.0
height = 96.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lxoi7"]
size = Vector2(15, 15)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_bjshi"]
b = Vector2(0, 1)

[node name="PlayerShip" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_vat7b")

[node name="HealthBasedSpriteComponent" type="Node2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("4_lv0p8")
sprite_frames = ExtResource("2_lxoi7")
animation = &"player"
health_component = NodePath("../HealthComponent")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="HealthBasedSpriteComponent"]
unique_name_in_owner = true
sprite_frames = ExtResource("2_lxoi7")
animation = &"player"

[node name="BodyShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_vat7b")

[node name="FrontShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 41)
rotation = 0.785398
shape = SubResource("RectangleShape2D_lxoi7")

[node name="ProjectileComponent" type="Area2D" parent="."]
position = Vector2(0, 52)
collision_layer = 8
collision_mask = 15
script = ExtResource("3_lxoi7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileComponent"]
shape = SubResource("SegmentShape2D_bjshi")

[node name="HealthComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_bjshi")

[node name="ShipPhysicsComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_vc7ef")

[connection signal="body_entered" from="ProjectileComponent" to="ProjectileComponent" method="_on_body_entered"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
